// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio base demo works fine 1`] = `
<div
  class="tdesign-radio-base"
>
  <div
    class="tdesign-demo-block"
  >
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        type="radio"
        value=""
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        未选中转项
      </span>
    </label>
     
    <label
      class="t-radio t-is-checked"
    >
      <input
        class="t-radio__former"
        type="radio"
        value=""
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        选中项
      </span>
    </label>
     
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value=""
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        未选禁用项
      </span>
    </label>
     
    <label
      class="t-radio t-is-checked t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value=""
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        选中禁用项
      </span>
    </label>
     
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        type="radio"
        value=""
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        default uncheck
      </span>
    </label>
     
    <label
      class="t-radio t-is-checked"
    >
      <input
        class="t-radio__former"
        type="radio"
        value=""
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        default check
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio radio button demo works fine 1`] = `
<div
  class="tdesign-radio-button"
>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-default"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="1"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项一
        </span>
      </label>
       
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="3"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项二
        </span>
      </label>
       
      <label
        class="t-radio-button t-is-checked t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项三
        </span>
      </label>
       
      <label
        class="t-radio-button t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          type="radio"
          value="4"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项四
        </span>
      </label>
    </div>
  </div>
   
  <div>
    <div
      class="t-radio-group t-radio-group-solid t-radio-group-default"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="bj"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项一
        </span>
      </label>
       
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项二
        </span>
      </label>
       
      <label
        class="t-radio-button t-is-checked t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项三
        </span>
      </label>
       
      <label
        class="t-radio-button t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          type="radio"
          value="sz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项四
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Radio radio button size demo works fine 1`] = `
<div
  class="tdesign-radio-button-size"
>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-small"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="bj"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          北京
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="sh"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          上海
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          广州
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="sz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          深圳
        </span>
      </label>
    </div>
  </div>
   
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-default"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="bj"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          北京
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="sh"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          上海
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          广州
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="sz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          深圳
        </span>
      </label>
    </div>
  </div>
   
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-large"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="bj"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          北京
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="sh"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          上海
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          广州
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          type="radio"
          value="sz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          深圳
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Radio radio group demo works fine 1`] = `
<div
  class="tdesign-radio-group"
>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-default"
    >
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="bj"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          北京
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="sh"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          上海
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="gz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          广州
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="sz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          深圳
        </span>
      </label>
    </div>
  </div>
   
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-default"
    >
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="bj"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          北京
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="sh"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          上海
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="gz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          广州
        </span>
      </label>
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="sz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          深圳
        </span>
      </label>
    </div>
  </div>
   
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-default"
    >
      <label
        class="t-radio t-is-disabled"
      >
        <input
          class="t-radio__former"
          disabled=""
          type="radio"
          value="bj"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          北京
        </span>
      </label>
      <label
        class="t-radio t-is-disabled"
      >
        <input
          class="t-radio__former"
          disabled=""
          type="radio"
          value="sh"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          上海
        </span>
      </label>
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="gz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          广州
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="sz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          深圳
        </span>
      </label>
    </div>
  </div>
   
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-default"
    >
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="bj"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          北京
        </span>
      </label>
       
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="sh"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          上海
        </span>
      </label>
       
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          type="radio"
          value="gz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          广州
        </span>
      </label>
       
      <label
        class="t-radio t-is-disabled"
      >
        <input
          class="t-radio__former"
          disabled=""
          type="radio"
          value="sz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          深圳
        </span>
      </label>
    </div>
  </div>
</div>
`;
